<resources>
    <string name="app_name">PACABS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_frag">splashFragment</string>
    <string name="login_signup_frag">loginSignup</string>
    <string name="otp_frag">OTPFrag</string>
    <string name="welcome">Welcome</string>
    <string name="services_to_transport_you_n_where_you_need_to_go">Services to transport you \n where you need to go</string>
    <string name="signup">Signup</string>
    <string name="login">login</string>
    <string name="number_only_digits">0123456789</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_pasword">Enter password</string>
    <string name="forgot_passoword">Forgot Passoword</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="i_have_read_and_agreed_the_terms_conditions"><![CDATA[I have read and agreed the <u>terms & Conditions</u>]]></string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email">Enter email address</string>
    <string name="set_password">Set Password</string>
    <string name="otp">OTP</string>
    <string name="verification">Verification</string>
    <string name="enter_otp_code_sent_to_your_mobile_number">Enter OTP Code sent to your mobile number</string>
    <string name="continoue">Continoue</string>
    <string name="dashboardStep1">DashboardStep1</string>
    <string name="i_am_looking_for">I am looking for</string>
    <string name="razor_pay">rzp_test_EmV2COwoczSMmV</string>
    <string name="taxi">   Taxi   </string>
    <string name="driver">Driver</string>
    <string name="search">Search</string>
    <string name="dashboadStep2">DashboardStep2Frag</string>
    <string name="list">List</string>
    <string name="map">Map</string>
<!--    <string name="places_key">AIzaSyAK5zL6ok3vWgiiMVzWX2vQMhbmRGFJ3ng</string>-->
    <string name="map_key">AIzaSyBGSjK7aKKqIMHYXUvx3RBw1l23Zt8Oybk</string>
    <string name="hello">Hello</string>
    <string name="hours_or_services_may_difffer">Hours or services may difffer</string>
    <string name="cabs_services_provider"><![CDATA[Cabs & Services Provider]]></string>
    <string name="local">Local</string>
    <string name="book_now">Book Now</string>
    <string name="book_later">Book Later</string>
    <string name="now">Now</string>
    <string name="araam_day_sasti_sawari">Araam Day, Sasti Sawari</string>
    <string name="mini_car">Mini Car</string>
    <string name="_3_mins">3 mins</string>
    <string name="minimum_fare_of_the_package">Minimum fare of the package</string>
    <string name="hundred_">₹100</string>
    <string name="extra_per_km_fare">Extra per km fare</string>
    <string name="extra_per_minut_fare">Extra per minut fare</string>
    <string name="fare_variation_">Price may vary base on the trip duration, distance and usage is limited in city limits. Kindly pay the parking and toll chargers</string>
    <string name="got_it">Got it</string>
    <string name="total_estimated_fare_price_n_including_taxes">Total Estimated fare price \n including taxes.</string>
    <string name="you_can_change_drop_location_payment_methods_while_on_ride"><![CDATA[You can change drop location & payment methods while on ride]]></string>
    <string name="waiting_for_the_service_provider_confirmation">Waiting for the service provider confirmation</string>
    <string name="ensure_you_travel_only_if_you_are_not_showing_any_covid_symtoms_and_wearing_a_mask">Ensure you travel only if you are not showing any COVID symtoms and wearing a mask</string>
    <string name="ride_confirmation">Ride Confirmation</string>
    <string name="estimation">ESTIMATION</string>
    <string name="total_estimated_fare_price_including_taxes">Total Estimated fare price including taxes</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="plan_type">Plan Type</string>
    <string name="hours">Hours</string>
    <string name="kms">Kms</string>
    <string name="price">Price</string>
    <string name="extra_km">Extra/Km</string>
    <string name="extra_hr">Extra/Hr</string>
    <string name="bill_details">Bill Details</string>
    <string name="base_fare">Base Fare</string>
    <string name="coupon_discount">Coupon/Discount</string>
    <string name="total_bill">Total Bill</string>
    <string name="payment">Payment</string>
    <string name="cash_online">Cash/Online</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="paid">Paid</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="cancel_desc">Are you want to cancel to \n cancel the booking ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="booking_cancelled">Booking Cancelled</string>
    <string name="my_rides">My Rides</string>
    <string name="invites_firends">Invite Friends</string>
    <string name="offer_discount">Offers And Discount</string>
    <string name="notications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="razorpay">RazorPay</string>
    <string name="cash">Cash</string>
    <string name="date_15_nov_2020">Date: 15-Nov-2020</string>
    <string name="cancelled">Cancelled</string>
    <string name="dummu_loc">Sai nilayam, East Parsanth Nager, Hydrabad, Telangana 5000636, India</string>
    <string name="earn_upto_50_by_referring_your_n_friends">Earn upto ₹50 by referring your \n friends</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="others">Others</string>
    <string name="offers_and_discount">Offers And Discount</string>
    <string name="power_pass">Power Pass</string>
    <string name="valid_for">Valid For</string>
    <string name="flat_50_off_upto_rs25_on_all_rides">Flat 50% off upto Rs25 on all rides</string>
    <string name="my_profile">My Profile</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="enter_loction_type_i_e_home_office_etc">Enter Loction Type i.e Home, Office, etc</string>
    <string name="search_loction">Search Loction</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="places_key_tayyab">AIzaSyBAmiMpUaExFrZtoDvUvHKLxizWqKud4hA</string>

</resources>